<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cadetblue">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo1"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textStyle="italic"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo2"
        android:textSize="30dp"
        android:gravity="center"

        android:textStyle="italic"
        android:textColor="@color/white"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:onClick="operar_area">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuadrado"
            android:textSize="20dp"
            android:textColor="@color/lavender"
            android:textStyle="bold"
            android:id="@+id/s_cua"
            android:onClick="operar_area"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rectangulo"
            android:textSize="20dp"
            android:textColor="@color/lavender"
            android:textStyle="bold"
            android:id="@+id/s_rec"
            android:onClick="operar_area"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangulo"
            android:textSize="20dp"
            android:textColor="@color/lavender"
            android:textStyle="bold"
            android:id="@+id/s_tria"
            android:onClick="operar_area"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/circulo"
            android:textSize="20dp"
            android:textColor="@color/lavender"
            android:textStyle="bold"
            android:id="@+id/s_cir"
            android:onClick="operar_area"/>

    </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Lado"
                    android:textSize="20dp"
                    android:textColor="@color/lavender"
                    />
                <EditText
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/s_lado"
                    android:enabled="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/base"
                    android:textSize="20dp"
                    android:textColor="@color/lavender"
                    />
                <EditText
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/s_base"
                    android:enabled="false"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altura"
                    android:textSize="20dp"
                    android:textColor="@color/lavender"
                    />
                <EditText
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/s_altura"
                    android:enabled="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio"
                    android:textSize="20dp"
                    android:textColor="@color/lavender"
                    />
                <EditText
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/s_radio"
                    android:enabled="false"/>

            </LinearLayout>
        </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/boton"
        android:background="@color/lavender"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textColor="@color/cadetblue"
        android:id="@+id/total"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo3"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/titulo4"
            android:textColorHint="@color/lavender"
            android:textSize="25dp"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:id="@+id/respuesta"/>

    </LinearLayout>
    <TextView
        android:layout_width="100dp"
        android:layout_height="99dp"
        />

</LinearLayout>

</ScrollView>
